Build: Add hacky workaround for retrying PublishToMavenRepository tasks
It's supposed to help with `Caused by: org.apache.http.NoHttpResponseException: api.bintray.com:443 failed to respond`

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,6 +10,7 @@ kotlin.compiler.newInferenceEnabled=true
 #bootstrap.kotlin.version=1.1.50-dev-1451
 bootstrap.kotlin.default.version=1.4.20-dev-1530
 
+kotlin.build.publishing.attempts=20
 #signingRequired=true
 
 ## The following properties can be added to your local.properties file to customize the build:
